(iotd/queues) Fix z-index of "100%" label for mouse-hover

--- a/src/app/features/iotd/components/base-promotion-entry/base-promotion-entry.component.scss
+++ b/src/app/features/iotd/components/base-promotion-entry/base-promotion-entry.component.scss
@@ -62,6 +62,7 @@
     color: var(--white);
     background-color: rgba(0, 0, 0, .5);
     border: 1px solid var(--white);
+    z-index: 1;
   }
 
   &:hover {
